# cmake-template

./: CMakeLists.txt  README.md
include/: myapp.h
internal-lib/: CMakeLists.txt
internal-lib/include/: pc1.h
internal-lib/src/: pc1.c
precompiled/include/: pc2.h
src/: myapp.c
test/: CMakeLists.txt  test_null.c  test_pc1.c  test_pc2.c
